--- a/veterinarias.html
+++ b/veterinarias.html
@@ -7,37 +7,42 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/styles.css">
     <title>Hello, world!</title>
   </head>
   <body>
- <div class="container">
-  <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="#">Veterinaria</a>
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-        <a class="nav-link" href="/index.html">Mascotas<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="/veterinarias.html">Veterinari@s</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link disabled" href="/consultas.html">Consultas</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" href="/duenos.html">Dueños</a>
-            </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-    </div>
-</nav>
+    <div class="container">
+
+
+
+      <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <a class="navbar-brand" href="#">Veterinaria</a>
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+              <a class="nav-link" href="/index.html">Mascotas<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="/veterinarias.html">Veterinari@s</a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link disabled" href="/consultas.html">Consultas</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link disabled" href="/duenos.html">Dueños</a>
+                  </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+          </div>
+      </nav>
+    
       <!---->
       <div class="actions-menu">
         <h1>Veterinarias</h1>
@@ -64,14 +69,14 @@
       </table>
      </div>
 
-     <div class="modal fade" id="exampleModalCenter" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" data-backdrop="static" data-keyboard="true">
+     <div class="modal fade" data-backdrop="static" data-keyboard="false" role="dialog" id="exampleModalCenter" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLongTitle">Nueva Veterinaria</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+               </div>
+              <div class="modal-body">
               <form id="form">
                 <input type="hidden" id="indice">
                   <div class="form-row">
@@ -83,6 +88,8 @@
                           <option>Ecuador</option>
                           <option>Bolivia</option>
                        </select>
+                      </div> 
+                         <div class="col">
                       <input id="identificacion" type="text" name="identificacion" class="form-control" placeholder="identificacion">
                     </div>
                   </div> 
@@ -94,15 +101,17 @@
                         <input id="apellido" type="text" name="apellido" class="form-control" placeholder="Apellido">
                       </div>
                       <div>    
-        </form>
-    </div>
-            <div class="modal-footer">
+               </form>
+              </div>
+              <div class="col">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
               <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="btn-guardar">Crear</button>
             </div>
           </div>
         </div>
       </div>
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
