--- a/veterinaria-fullstack/frontend/consultas.html
+++ b/veterinaria-fullstack/frontend/consultas.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-<link rel="stylesheet" href="veterinaria/css/styles.css">
+<link rel="stylesheet" href="./css/styles.css">
     <title>Hello, world!</title>
   </head>
   <body>
@@ -18,19 +18,20 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/veterinaria/index.html">Mascotas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/veterinaria-fullstack/frontend/veterinarias.html">Veterinari@s</a>
+                <a class="nav-link" href="/veterinarias.html">Veterinari@s</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/veterinaria-fullstack/frontend/consultas.html">Consultas</a>
+                <a class="nav-link" href="/consultas.html">Consultas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/veterinaria-fullstack/frontend/dueños.html">Dueños</a>
+                <a class="nav-link" href="/dueños.html">Dueños</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -45,99 +46,88 @@
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Nueva
           </button>
+          <div class="alert alert-danger alert-dismissible" role="alert">
+            <strong>Oops!</strong> Algo hicimos mal, por favor vuelve a intentarlo!.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
       </div>
       <!---->
     <table class="table table-stripped table-hover">
         <thead class="thead-dark">
           <tr>
             <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-            <th scope="col"> </th>
-
+            <th scope="col">Mascota</th>
+            <th scope="col">Veterinari@</th>
+            <th scope="col">Diagnostico</th>
+            <th scope="col">Creado</th>
+            <th scope="col">Editado</th>
+            <th scope="col"></th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>
-              <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-info">Editar</button>
-                <button type="button" class="btn btn-danger">Eliminar</button>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td>
-              <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-info">Editar</button>
-                <button type="button" class="btn btn-danger">Eliminar</button>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry the Bird</td>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
-            <td>
-              <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-info">Editar</button>
-                <button type="button" class="btn btn-danger">Eliminar</button>
-              </div>
-            </td>
-          </tr>
+        <tbody id="lista-consultas">
         </tbody>
       </table>
-     </div>
-
-     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+    </div>
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Nueva Mascota</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <h5 class="modal-title" id="exampleModalCenterTitle">Nueva Mascota</h5>
+              <div class="alert alert-warning alert-dismissible" role="alert">
+                Te faltan datos!
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
+
             <div class="modal-body">
-              <form>
-                <div class="form-row">
-                <div class="col">
-                    <select class="form-control" id="exampleFormControlSelect1">
-                      <option>Tipo de animal</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                    </select>
-                </div>
-                </div>
+              <form class="needs-validation" id="formulario">
+                  <input type="hidden" id="indice" />
                   <div class="form-row">
                       <div class="col">
-                        <input type="text" class="form-control" placeholder="First name">
+                          <select class="form-control clase-temporal" id="mascota">
+                            <option value="">Seleccione Mascota</option>
+                          </select>
                       </div>
+                  </div>
+                  <div class="form-row">
                       <div class="col">
-                        <input type="text" class="form-control" placeholder="Last name">
+                          <select class="form-control" id="veterinaria">
+                            <option value="">Seleccione Veterinari@</option>
+                          </select>
                       </div>
-                     
-                  </div>    
-        </form>
-    </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+                  </div>
+                  <div class="form-row">
+                    <div class="col">
+                      <textarea id="historia" class="form-control" placeholder="Historia"></textarea>
+                    </div>
+                  </div>
+                  <div class="form-row">
+                      <div class="col">
+                        <select class="form-control" id="diagnostico">
+                          <option value="">Seleccionar Diagnostico</option>
+                          <option>Prurito de piel (sarna)</option>
+                          <option>Moquillo</option>
+                          <option>Trauma cefálico</option>
+                          <option>Parvovirosis</option>
+                        </select>
+                      </div>
+                  </div>
+              </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" id="btn-guardar">Crear</button>
           </div>
         </div>
       </div>
+  </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -149,5 +139,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
+    <script src="./js/consultas.js"></script>
   </body>
 </html>
