--- a/veterinaria-fullstack/frontend/duenos.html
+++ b/veterinaria-fullstack/frontend/duenos.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet" href="./css/styles.css">
     <title>Hello, world!</title>
   </head>
   <body>
@@ -43,17 +43,23 @@
       <!---->
       <div class="actions-menu">
         <h1>Dueños de  Mascotas</h1>
+        <div class="actions-menu-content">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Nueva
           </button>
+          <div class="alert alert-danger alert-dismissible" role="alert">
+            <strong>Oops!</strong> Algo hicimos mal, por favor vuelve a intentarlo!.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
       </div>
       <!---->
     <table class="table table-stripped table-hover">
         <thead class="thead-dark">
           <tr>
             <th scope="col">#</th>
-            <th scope="col">identificacion</th>
-            <th scope="col">País</th>
+            <th scope="col">Doucumento</th>
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
             <th scope="col"> </th>
@@ -78,20 +84,15 @@
                 <input type="hidden" id="indice">
                   <div class="form-row">
                     <div class="col">
-                      <select class="form-control" id="pais">
-                        <option>País</option>
-                          <option>Colombia</option>
-                          <option>Perú</option>
-                          <option>Ecuador</option>
-                          <option>Bolivia</option>
-                       </select>
-                      <input id="identificacion" type="text" name="identificacion" class="form-control" placeholder="identificacion">
+                      <input id="doucumento" type="text" name="doucumento" class="form-control" placeholder="doucumento">
                     </div>
                   </div> 
                     <div class="form-row">
                       <div class="col">
                         <input id="nombre" type="text" name="nombre" class="form-control" placeholder="Nombre">
                       </div>
+                    </div>
+                    <div class="form-row">
                       <div class="col">
                         <input id="apellido" type="text" name="apellido" class="form-control" placeholder="Apellido">
                       </div>
@@ -117,6 +118,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
-    <script src="/veterinaria-fullstack/frontend/js/duenos.js"></script>
+    <script src="./js/duenos.js"></script>
   </body>
 </html>
