--- a/veterinaria-fullstack/frontend/index.html
+++ b/veterinaria-fullstack/frontend/index.html
@@ -30,10 +30,10 @@
               <a class="nav-link" href="/veterinaria-fullstack/frontend/veterinarias.html">Veterinari@s</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link disabled" href="/veterinaria-fullstack/frontend/consultas.html">Consultas</a>
+              <a class="nav-link " href="/veterinaria-fullstack/frontend/consultas.html">Consultas</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link disabled" href="/veterinaria-fullstack/frontend/duenos.html">Dueños</a>
+                  <a class="nav-link" href="/veterinaria-fullstack/frontend/duenos.html">Dueños</a>
                   </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -45,10 +45,17 @@
       <!---->
       <div class="actions-menu">
         <h1>Macotas</h1>
+        <div class="actions-menu-content">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
             Nueva
           </button>
-      </div>
+          <div class="alert alert-danger alert-dimissible fade hide" role="alert">
+            <strong>Oops!</strong>Algo hicimos mal, por favor vuelve a intentarlo!.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+       </div>
       <!---->
     <table class="table table-stripped table-hover">
         <thead class="thead-dark">
