--- a/veterinaria-fullstack/frontend/veterinarias.html
+++ b/veterinaria-fullstack/frontend/veterinarias.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet" href="./css/styles.css">
     <title>Hello, world!</title>
   </head>
   <body>
@@ -30,10 +30,10 @@
               <a class="nav-link" href="/veterinaria-fullstack/frontend/veterinarias.html">Veterinari@s</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link disabled" href="/veterinaria-fullstack/frontend/consultas.html">Consultas</a>
+              <a class="nav-link" href="/veterinaria-fullstack/frontend/consultas.html">Consultas</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link disabled" href="/veterinaria-fullstack/frontend/duenos.html">Dueños</a>
+                  <a class="nav-link" href="/veterinaria-fullstack/frontend/duenos.html">Dueños</a>
                   </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -46,17 +46,24 @@
       <!---->
       <div class="actions-menu">
         <h1>Veterinarias</h1>
+        <div class="actions-menu-content">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
             Nueva
           </button>
+          <div class="alert alert-danger alert-dimissible fade hide" role="alert">
+            <strong>Oops!</strong>Algo hicimos mal, por favor vuelve a intentarlo!.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
       </div>
+    </div>
       <!---->
     <table class="table table-stripped table-hover">
         <thead class="thead-dark">
           <tr>
             <th scope="col">#</th>
-            <th scope="col">identificacion</th>
-            <th scope="col">País</th>
+            <th scope="col">Documento</th>
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
             <th scope="col"> </th>
@@ -90,7 +97,7 @@
                        </select>
                       </div> 
                          <div class="col">
-                      <input id="identificacion" type="text" name="identificacion" class="form-control" placeholder="identificacion">
+                      <input id="documento" type="text" name="Documento" class="form-control" placeholder="Documento">
                     </div>
                   </div> 
                     <div class="form-row">
@@ -124,7 +131,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>-->
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
-    <script src="/veterinaria-fullstack/frontend/js/veterinarios.js"></script>
+    <script src="./js/veterinarios.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
