--- a/veterinaria-fullstack/frontend/veterinarias.html
+++ b/veterinaria-fullstack/frontend/veterinarias.html
@@ -87,15 +87,6 @@
               <form id="form">
                 <input type="hidden" id="indice">
                   <div class="form-row">
-                    <div class="col">
-                      <select class="form-control" id="pais">
-                        <option>País</option>
-                          <option>Colombia</option>
-                          <option>Perú</option>
-                          <option>Ecuador</option>
-                          <option>Bolivia</option>
-                       </select>
-                      </div> 
                          <div class="col">
                       <input id="documento" type="text" name="Documento" class="form-control" placeholder="Documento">
                     </div>
@@ -131,7 +122,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>-->
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
-    <script src="./js/veterinarios.js"></script>
+    <script src="/js/veterinarias.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
